--- a/styles/styles.css
+++ b/styles/styles.css
@@ -20,7 +20,7 @@ font-size: 2em;
 grid-column: 1 / -1;
 margin: 0;
 text-align: center;
-text-shadow: none;
+text-shadow: 3px 3px 1px none;
 }
 
 form {
