--- a/styles/styles.css
+++ b/styles/styles.css
@@ -15,7 +15,12 @@ margin: 1em;
 padding: 1em;
 }
 
-
+h1 {
+font-size: 2em;
+grid-column: 1 / -1;
+margin: 0;
+text-align: center;
+}
 
 form {
 font-size: 2em;
