--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,7 @@
 html {
 align-items: center;
-color: #313131;
+background-color: #313131;
+color: whitesmoke;
 display: flex;
 font: 22px "Courier New", Courier, monospace;
 height: 100%;
