--- a/styles/styles.css
+++ b/styles/styles.css
@@ -30,7 +30,7 @@ text-align: center;
 }
 
 form input[type="search"] {
-background-color: rgba(255, 255, 255, 0.95);
+background-color: #313131;
 border: none;
 box-sizing: border-box;
 font-weight: bold;
