--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,86 +1,90 @@
+.teal_text {
+    color: teal;
+}
+    
+.cream_text {
+    color: #fffdd0;
+}
+
 html {
-align-items: center;
-background-color: #313131;
-color: whitesmoke;
-display: flex;
-font: 22px "Courier New", Courier, monospace;
-height: 100%;
-justify-content: center;
-margin: 0;
+    align-items: center;
+    background-color: #313131;
+    color: whitesmoke;
+    display: flex;
+    font: 22px "Courier New", Courier, monospace;
+    height: 100%;
+    justify-content: center;
+    margin: 0;
 }
 
 body {
-display: flex;
-margin: 1em;
-padding: 1em;
+    display: flex;
+    margin: 1em;
+    padding: 1em;
 }
 
 h1 {
-font-size: 2em;
-grid-column: 1 / -1;
-margin: 0;
-text-align: center;
+    font-size: 2em;
+    grid-column: 1 / -1;
+    margin: 0;
+    text-align: center;
 }
 
 form {
-font-size: 2em;
-grid-column: 1 / -1;
-margin: 0;
-text-align: center;
+    font-size: 2em;
+    grid-column: 1 / -1;
+    margin: 0;
+    text-align: center;
 }
 
 form input[type="search"] {
-background-color: #313131;
-color: whitesmoke;
-border: none;
-box-sizing: border-box;
-font-weight: bold;
-font: inherit;
-width: 100%;
+    background-color: #313131;
+    color: teal;
+    border: none;
+    box-sizing: border-box;
+    font-weight: bold;
+    font: inherit;
+    width: 100%;
 }
 
 form label {
-color: #1d81b2;
-left: -1em;
-position: absolute;
+    color: #1d81b2;
+    left: -1em;
+    position: absolute;
 }
 
 form:focus-within input::placeholder {
-opacity: 0;
+    opacity: 0;
 }
 
 a {
-color: inherit;
-text-decoration: none;
+    color: inherit;
+    text-decoration: none;
 }
 
 a:focus,
 a:hover {
-color: #1d81b2;
+    color: #1d81b2;
 }
 
 nav {
-display: grid;
-grid-gap: 1em 1em;
-grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-margin: 0 1em;
-min-width: 24em;
-padding: 1em 0;
+    display: grid;
+    grid-gap: 1em 1em;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    margin: 0 1em;
+    min-width: 24em;
+    padding: 1em 0;
 }
 
 ul {
-list-style-type: none;
-margin: 0;
-padding: 0;
-white-space: nowrap;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    white-space: nowrap;
 }
 
 li:first-child {
-color: teal;
-font-weight: bold;
-line-height: 2em;
-}
-
-.cobalt_text {
-color: #0047ab;
+    color: teal;
+    font-weight: bold;
+    line-height: 2em;
 }
