--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,6 +6,10 @@
     color: #b7410e;
 }
 
+.purple_text {
+    color: 6441a5;
+}
+
 html {
     align-items: center;
     background-color: #313131;
