--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10,6 +10,10 @@
     color: #6441a5;
 }
 
+.cyan_text {
+    color: #00FFFF;
+}
+
 html {
     align-items: center;
     background-color: #313131;
