--- a/styles/styles.css
+++ b/styles/styles.css
@@ -48,7 +48,7 @@ form {
 form input[type="search"] {
     background-color: #3a3939;
     border-radius: 50px;
-    color: cyan_text;
+    color: #00FFFF;
     border: none;
     box-sizing: border-box;
     font-weight: bold;
@@ -88,7 +88,7 @@ ul {
 }
 
 li:first-child {
-    color: cyan_text;
+    color: #00FFFF;
     font-weight: bold;
     font-size: 1.5em;
     line-height: 2em;
