--- a/styles/styles.css
+++ b/styles/styles.css
@@ -88,7 +88,7 @@ ul {
 }
 
 li:first-child {
-    color: #00FFFF;
+    color: teal;
     font-weight: bold;
     font-size: 1.5em;
     line-height: 2em;
